--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     volumes:
       - data:/data/db
     # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: max
-    #   MONGO_INITDB_ROOT_PASSWORD: secret
+    #   MONGO_INITDB_ROOT_USERNAME:user
+    #   MONGO_INITDB_ROOT_PASSWORD:pass
     env_file:
       - ./env/mongo.env
     
